--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 
                <div class="container-fluid">
               <div class="row">
-                <div class="col-md-9.5">
+                <div class="col-md-9.5 col-sm-12">
                     
                     <div class="card" style="height:500px ;">
                         <div class="card-header" style="background-color: white;font-weight: bold;">
@@ -696,7 +696,7 @@
                 
 
 
-                <div class="col-md-3 no-gutters">
+                <div class="col-md-3 col-sm-12 no-gutters">
                    <div class="card">
                     <div class="card-body">
                         <div class="d-flex">
