--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                 <div class="card " style="background-color: #FFFFFF;width:102%;height: 74px;">
                     <div class="card-body">
                         <div class="d-flex">
-                            <div class="mr-auto p-1">Dashboards</div>
+                            <div class="mr-auto p-1">Dashboard</div>
                             <div class="p-2 mr-1" style="margin-top: -15px;">
                                 <img src="./asset/14.png" style="width:60px;" >
                             </div>
@@ -408,12 +408,12 @@
 
                                 <button type="button" class="btn btn-outline-secondary" 
                                 style="background-color: #C4D4FC;color:#084C9C;font-weight: bold; border: 0px;">
-                               11
+                                My Dashboard
                             </button>
 
                             </div>
                             <div class="mr-auto ">
-                                <p style="margin-left: -560px;margin-top: 10px;">Employee Center</p>
+                                <p style="margin-left: -400px;margin-top: 10px;">Employee Center</p>
                             </div>
                             
                             <div class="p-2 " style="margin-top: -15px;" >
